v0.0.4    Sat, 14 May 2016 05:45:57 +0900
  - resize 된 허리 둘레에 맞춰서 밑단을 계산하도록 함

v0.0.3    Thu, 12 May 2016 13:12:24 +0900
  - Fix assigned clothes top, bottom syntax

v0.0.2    Thu, 12 May 2016 12:34:40 +0900
  - 정해진 표를 통해 의류의 수선 사이즈를 제안
  - Add OpenCloset::Constants::Status
  - Add OpenCloset::Common::Clothes

v0.0.1    Mon, 02 May 2016 18:56:40 +0900
  - Initial release