@@ -1,3 +1,5 @@
+  - Export category hash MAPs
+
 v0.0.4    Sat, 14 May 2016 05:45:57 +0900
   - resize 된 허리 둘레에 맞춰서 밑단을 계산하도록 함
 
